--- a/AutoMall/Info.plist
+++ b/AutoMall/Info.plist
@@ -30,6 +30,16 @@
 				<string>AliPay2017101609335037</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>weixin</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wx0235d94e74c9dcb8</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>29</string>
