--- a/AutoMall/Info.plist
+++ b/AutoMall/Info.plist
@@ -42,7 +42,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>75</string>
+	<string>76</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -50,10 +50,12 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>App需要您的同意,才能访问媒体资料库</string>
 	<key>NSCameraUsageDescription</key>
-	<string>需要访问相机权限</string>
+	<string>App需要访问您的相机，来使用拍摄的图片</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>需要访问相册权限</string>
+	<string>App需要访问您的相册，来使用选择的图片</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
