--- a/AutoMall/Info.plist
+++ b/AutoMall/Info.plist
@@ -42,7 +42,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>94</string>
+	<string>96</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -54,6 +54,8 @@
 	<string>App需要您的同意,才能访问媒体资料库</string>
 	<key>NSCameraUsageDescription</key>
 	<string>App需要访问您的相机，来使用拍摄的图片</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>App需要访问您的相册，来保存照片到相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>App需要访问您的相册，来使用选择的图片</string>
 	<key>UIMainStoryboardFile</key>
