--- a/AutoMall/Info.plist
+++ b/AutoMall/Info.plist
@@ -54,10 +54,16 @@
 	<string>App需要您的同意,才能访问媒体资料库</string>
 	<key>NSCameraUsageDescription</key>
 	<string>App需要访问您的相机，来使用拍摄的图片</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>后台使用位置信息</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>App需要访问您的相册，来保存照片到相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>App需要访问您的相册，来使用选择的图片</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
